--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/1299f5c5b3.js" crossorigin="anonymous"></script>
+
   </head>
+  <style>
+    html{
+      background-color: #333;
+    }
+  </style>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
